# CNGT-scripts

./: .gitignore  LICENSE  README.md  setup.cfg
CNGT_scripts/python/: addSignbankLink.py  cngt_calculated_metadata.py  eaf2webvtt.py  eafGlossChanger.py  eafRemoveUnusedLingtypes.py  extract_cngt_metadata.py  mergevtts.py  txt2eaf.py  underscoreAnnotationChanger.py  webvtt_shift_times.py
CNGT_scripts/python/filecollectionprocessing/: filecollectionprocessor.py  fileprocessor.py
python/: EafProcessor.py  addSignbankLink.py  cngt_calculated_metadata.py  createmergevttcommands.py  eaf2webvtt.py  eafCleaner.py  eafGlossChanger.py  eafSearchReplace.py  extractMiddleFrame.py  extract_cngt_metadata.py  glossExtractor.py  resizeVideos.py  signCounter.py  txt2eaf.py
python/asl/: aslEafRestructure.py  aslEafTransform.py
python/filecollectionprocessing/: eafprocessor.py  filecollectionprocessor.py  fileprocessor.py
python/metadata2tiers/: metadata2tiers.py
sh/: extractMiddleFrame.sh
