[metadata]
name = cngt-scripts
version = 0.0.1
author = Micha Hulsbosch
author_email = michahulsbosch@gmail.com
description = CNGT scripts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vanlummelhuizen/CNGT-scripts
project_urls =
    Bug Tracker = https://github.com/vanlummelhuizen/CNGT-scripts/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    lxml
    numpy
    pympi-ling
    webvtt-py
    openpyxl
    flatdict

[options.packages.find]
where = .
